--- a/wp-content/themes/foodog/print.css
+++ b/wp-content/themes/foodog/print.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 /*
-Theme Name: Twenty Twenty
+Theme Name: FooDog
 Adding print support. The print styles are based on the the great work of
 Andreas Hecht in https://www.jotform.com/blog/css-perfect-print-stylesheet-98272/.
 */
