better way of loading fonts fixes in functions , and header

--- a/wp-content/themes/foodog/style.css
+++ b/wp-content/themes/foodog/style.css
@@ -4,3 +4,7 @@ Version: 1.0.0
 Description: Theme wordpres créé par la team 7 ( Luciano Caturano, Marco Segretario, Stéphane Léonard, Jean Mourmeaux )
 Author: Team 7
 */
+
+h1 {
+  font-family: "Crimson Text", serif;
+}
