--- a/wp-content/themes/foodog/style.css
+++ b/wp-content/themes/foodog/style.css
@@ -5,6 +5,26 @@ Description: Theme wordpres créé par la team 7 ( Luciano Caturano, Marco Segre
 Author: Team 7
 */
 
+/*******************************/
+/*           elements         */
+
+* {
+  font-family: "Open Sans", sans-serif;
+}
+
 h1 {
   font-family: "Crimson Text", serif;
+}
+/*******************************/
+/*             Classes         */
+.category {
+  color: coral;
+  text-decoration: none;
+  margin: 1em;
+}
+
+.category:hover {
+  color: rgb(255, 174, 145);
+  text-decoration: none;
+  cursor: pointer;
 }
