update loops and css

--- a/wp-content/themes/foodog/style.css
+++ b/wp-content/themes/foodog/style.css
@@ -33,3 +33,24 @@ h1 {
   color: rgb(63, 63, 63);
   text-align: center;
 }
+
+.all_featured{
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.featured{
+  max-width: 50%;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.featured img{
+  height: 150px;
+}
+
+.card_mini{
+  width: 300px;
+  height: 400px;
+}
