--- a/wp-content/themes/foodog/style.css
+++ b/wp-content/themes/foodog/style.css
@@ -18,12 +18,16 @@ h1 {
 /*             Classes         */
 .category {
   color: coral;
+  font-weight: 600;
+  font-size: 70%;
   text-decoration: none;
-  margin: .5em;
+  margin: 0.5em;
 }
 
 .category:hover {
   color: rgb(255, 174, 145);
+  font-size: 70%;
+  font-weight: 600;
   text-decoration: none;
   cursor: pointer;
 }
@@ -31,30 +35,51 @@ h1 {
 .single-title {
   font-weight: 700;
   color: rgb(63, 63, 63);
+  font-size: 170%;
   text-align: center;
 }
 
-.all_featured{
+.form-submit {
+  margin-left: 15px;
+}
+
+.btn-dark {
+  background-color: black;
+  border-radius: 0%;
+  font-weight: 600;
+  font-size: 70%;
+}
+
+.single-form::placeholder {
+  font-size: 80%;
+}
+
+.single-comments-title {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 700;
+  font-size: 130%;
+}
+
+.all_featured {
   display: flex;
   justify-content: space-evenly;
 }
 
-.featured{
+.featured {
   max-width: 50%;
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
 }
 
-.featured img{
+.featured img {
   height: 150px;
 }
 
-.article{
-
+.article {
 }
 
-.card_mini{
+.card_mini {
   width: 300px;
   height: 330px;
 }
