update loop and comment style.css

--- a/wp-content/themes/foodog/style.css
+++ b/wp-content/themes/foodog/style.css
@@ -34,6 +34,10 @@ h1 {
   text-align: center;
 }
 
+/**
+* classes for articles
+*/
+
 .all_featured{
   display: flex;
   justify-content: space-evenly;
@@ -58,3 +62,7 @@ h1 {
   width: 300px;
   height: 330px;
 }
+
+/**
+* end of class articles
+ */
