--- a/wp-content/themes/foodog/style.css
+++ b/wp-content/themes/foodog/style.css
@@ -65,6 +65,17 @@ h1 {
   border-radius: 50%;
   margin: 0.5em;
 }
+
+.meks_ess{
+  margin: 0 !important;
+}
+
+.side-socials{
+  margin-top: 8rem;
+}
+
+.side-ad{ 
+}
 /**
 * classes for articles
 */
