--- a/wp-content/themes/foodog/style.css
+++ b/wp-content/themes/foodog/style.css
@@ -10,6 +10,10 @@ Author: Team 7
 h1 {
   font-family: "Crimson Text", serif;
 }
+footer{
+  background-color: gray;
+  height: 300px;
+}
 /*******************************/
 /*             Classes         */
 .category {
