--- a/wp-content/themes/foodog/style.css
+++ b/wp-content/themes/foodog/style.css
@@ -120,10 +120,12 @@ h1 {
 
 .card {
   border: none;
+  text-decoration: none;
 }
 a.custom-card,
 a.custom-card:hover {
   color: inherit;
+  text-decoration: none;
 }
 
 .latest_article {
