--- a/wp-content/themes/foodog/style.css
+++ b/wp-content/themes/foodog/style.css
@@ -128,8 +128,24 @@ a.custom-card:hover {
   justify-content: space-around;
 }
 /*! classe Jean */
-.card-title{
-  background-color: red;
+.card-title-big{
+  font-size: 160%;
+  font-weight: 700;
+  font-family: "Open Sans", sans-serif;
+}
+.card-title-little{
+  font-size: 120%;
+  font-weight: 700;
+  font-family: "Open Sans", sans-serif;
+}
+.card-body-big {
+  
+}
+.custom-card-big {
+  
+}
+.card-big{
+  
 }
 
 /*! classe Luciano */
